--- a/app.yaml
+++ b/app.yaml
@@ -14,8 +14,8 @@ libraries:
 - name: webapp2
   version: "2.5.2"
 
-- name: six
-  version: "1.9.0"
+- name: ssl
+  version: "latest"
 
 - name: pycrypto
   version: "latest"
